test/tests/compiler/11_long_integers/invalid_parse/var_name_long.plx
pub fn main(none) i32 {
    # Because long is a keyword, you can't use it as a variable name
    i64: i32 = 5
    return i64
}
